Table "passwords" {
  "id" uuid [not null, default: `gen_random_uuid()`]
  "user_id" uuid
  "password" text
}

Table "sessions" {
  "id" uuid [not null, default: `gen_random_uuid()`]
  "user_id" uuid
  "token" text
}

Table "users" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "firstname" text
  "surname" text
  "country_code" varchar(255)
  "phone_number" varchar(255)
  "email" varchar(255)
}

Ref "fk_user":"users"."id" < "passwords"."user_id" [delete: set null]

Ref "fk_user":"users"."id" < "sessions"."user_id" [delete: set null]
